[gd_scene load_steps=4 format=3 uid="uid://dn6hcp4hfxyic"]

[ext_resource type="Script" uid="uid://bykb2xx7cihce" path="res://scenes/ui/version_container/version_container.gd" id="1_wrevx"]
[ext_resource type="AudioStream" uid="uid://c3ep4wqqo17ex" path="res://assets/audio/freesound_org/fart/short_definite_fart.wav" id="2_ve0o0"]
[ext_resource type="PackedScene" uid="uid://dic246sx4xjf6" path="res://scenes/ui/version_container/toggle_button/toggle_button.tscn" id="2_x8wem"]

[node name="SettingsContainer" type="MarginContainer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 4
size_flags_vertical = 4
script = ExtResource("1_wrevx")
sfx_fart = ExtResource("2_ve0o0")

[node name="Panel" type="Panel" parent="."]
visible = false
layout_mode = 2

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer"]
layout_mode = 2

[node name="ThemeToggleButton" parent="MarginContainer/HBoxContainer" instance=ExtResource("2_x8wem")]
unique_name_in_owner = true
visible = false
layout_mode = 2
theme_type_variation = &"ManagerButton"
_id = "theme"
_toggle_ids = Array[String](["debug", "dark"])
_toggle_id_index = 0

[node name="MarginContainer" type="MarginContainer" parent="MarginContainer/HBoxContainer"]
layout_mode = 2
theme_override_constants/margin_left = 8
theme_override_constants/margin_right = 12

[node name="VersionButton" type="Button" parent="MarginContainer/HBoxContainer/MarginContainer"]
unique_name_in_owner = true
modulate = Color(1, 1, 1, 0)
layout_mode = 2
text = "fart"

[node name="VersionLabel" type="Label" parent="MarginContainer/HBoxContainer/MarginContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 4
theme_override_font_sizes/font_size = 12
text = "pre-alpha
week 4"
horizontal_alignment = 1
